--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ The title of the webpage
 </title>
 </head>
 <body>
-<h1>This is my Heading</h1>
-This is where information to be presented to the user is entered.
+<h1>i am bored :)</h1>
+we are currently in computing class. we are learning to use github.com to create websites
 </body>
 </html>
