--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<head>
-<title>
+<head> whassup
+<title>yo
 The title of the webpage
 </title>
 </head>
@@ -9,3 +9,4 @@ The title of the webpage
 we are currently in computing class. we are learning to use github.com to create websites
 </body>
 </html>
+<h1 style="background-color:DodgerBlue;">Hello World</h1>
