--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <head> whassup
 <title>yo
 The title of the webpage
-</title>
-</head>
-<body>
+</title>yay
+</head>im amazinggggggg
+<body>so once upon a time tnere lived a girl named tomato. she lived in a pumpkin house and only ate potatoes. she grew avocado trees and banana plants too.
 <h1>i am bored :)</h1>
 we are currently in computing class. we are learning to use github.com to create websites
 </body>
 </html>
 <h1 style="background-color:DodgerBlue;">Hello World</h1>
+<p style="color:MediumSeaGreen;">Ut wisi enim...</p>
